# uni-schedule

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  option.rs  schedule.rs  storage.rs
src/__tests__/: Button.test.tsx
src/api/: fakeScheduleData.ts  schedule.ts  tauri.ts
src/components/: DayView.tsx  DebugSchedulePanel.tsx  VerticalGantt.tsx
src/components/DayView/: AggregateBar.tsx  DebugPanel.tsx  ScheduleBar.tsx  ScheduleForm.tsx  Sidebar.tsx  TimeAxis.tsx  Tooltip.tsx  VerticalGantt.tsx  hooks.ts  index.ts  layoutUtils.ts  types.ts  utils.ts
src/components/ui/: Button.tsx  Input.tsx  LoadingSpinner.tsx  index.ts
src/hooks/: index.ts  useSchedules.ts  useThemeMode.ts  useToggle.ts
src/theme/: EmotionThemeProvider.tsx  emotion.d.ts  muiAdapter.tsx
src/types/: index.ts  schedule.ts
src/utils/: dateUtils.ts  index.ts
uni-schedule-backend/: Cargo.toml  README.md  tauri.conf.json
uni-schedule-backend/src/: commands.rs  lib.rs  main.rs  option.rs  schedule.rs  storage.rs
uni-schedule-core/: Cargo.toml
uni-schedule-core/benches/: schedule_bench.rs
uni-schedule-core/src/: schedule.rs
uni-schedule-core/src/schedule/: lapper.rs  manager.rs  mod.rs
uni-schedule-frontend/: README.md  vite.config.ts  vitest.setup.ts
uni-schedule-frontend/src/: main.tsx
uni-schedule-frontend/src/components/: DebugSchedulePanel.tsx  VerticalGantt.tsx
uni-schedule-frontend/src/components/ui/: ErrorMessage.tsx
uni-schedule-frontend/src/theme/: index.ts  themes.ts
uni-schedule-frontend/src/types/: ui.ts
uni-schedule-frontend/src/utils/: colorUtils.ts
