[workspace]
resolver = "3"
members = ["uni-schedule-backend", "uni-schedule-core"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v7", "serde"] }

[profile.release]
lto = true
