[package]
name = "uni-schedule-backend"
version = "0.1.0"
description = "A Tauri App"
authors = ["Zhuang Jiawei"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "uni_schedule_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v7", "serde"] }
thiserror = "2.0.16"
# tantivy = "0.24.2"  # Commented out - full-text search disabled
native_db = "0.8.2"
native_model = "0.4.20"
once_cell = "1.21.3"
dirs = "6.0.0"
typed-builder = "0.21.1"
uni-schedule-core = { path = "../uni-schedule-core" }
sled = "0.34"
bincode = "1.3"
tokio = { version = "1.41", features = ["sync", "rt-multi-thread"] }
